# virt

./: .clang-format  .gitignore  Makefile.am  configure.ac
src/: Makefile.am
src/common/: Makefile.am  includes.h  libmain.c
src/include/: virtcommon.h  virtdefs.h  virtsys.h
src/tools/: Makefile.am
src/tools/virt/: Makefile.am  includes.h  main.c
